--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,6 @@
   
   --color-bg: #E5E5E5;
   --color-footer : #480f0d;
-  --color-blog: #042c54;
-  --color-text: #81AFDD;
-  --color-subtext: #FF8A71;
+  --color-text: #FF8A71;
+  --color-button: #dd9b00;
 }
