--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,6 @@
   
   --color-bg: #E5E5E5;
   --color-footer : #480f0d;
-  --color-text: #FF8A71;
-  --color-button: #dd9b00;
+  --color-text: #730702;
+  --color-button: #730702;
 }
