--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,9 @@ a {
 }
 
 .gradient__bg {
+  position:fixed;
+  height: 15vh;
+  width: 100%;
   background:-moz-radial-gradient(circle at 5% 10%, rgba(161, 35, 30, 1) 0%, rgba(72, 15, 13, 1) 100%);
   background:-webkit-radial-gradient(circle at 5% 10%, rgba(161, 35, 30, 1) 0%, rgba(72, 15, 13, 1) 100%);
   background:-o-radial-gradient(circle at 5% 10%, rgba(161, 35, 30, 1) 0%, rgba(72, 15, 13, 1) 100%);
@@ -82,4 +85,3 @@ a {
         margin: 4rem 2rem;
     }
   }
-
