--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -1,6 +1,8 @@
 .tanglaw__sidebar {
+    position:fixed;
+    bottom: 0;
     justify-content: space-between;
-    height: 100vh;
+    height: 85vh;
     width: 300px;
     background-color: #fff;
     box-shadow: 0px 0px 5px rgba(0,0, 0,0.2);
@@ -12,3 +14,4 @@
     display: flex;
     flex-direction: column;
 }
+
