--- a/src/containers/browse/browse.css
+++ b/src/containers/browse/browse.css
@@ -13,3 +13,7 @@
     font-style: italic;
     color: var(--color-text);
 }
+
+.tanglaw__sidebar-browse-category li:hover {
+    text-decoration: underline;
+}
