--- a/src/containers/search/search.css
+++ b/src/containers/search/search.css
@@ -31,3 +31,15 @@
     border-radius: 2px;
 }
 
+.tanglaw__sidebar-search a {
+    font-size: smaller;
+    font-style: italic;
+    z-index: 5;
+    text-decoration: none;
+    color: #730702;
+}
+
+.tanglaw__sidebar-search a:hover {
+    text-decoration: underline;
+    color: #A1231E;
+}
